# EvalDesk

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  AWS_DEPLOY.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  DOCS_AND_BENCHMARK_SPEC.md  Dockerfile  LICENSE  PYTHON_SDK_SPEC.md  README.md  action.yml  agent_eval_build_plan.html  claude-code.md  docker-compose.yml  drizzle.config.pg.ts  drizzle.config.sqlite.ts  drizzle.config.ts  evaldesk-hld.html  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vitest.config.mts
.claude/: settings.json
.commandcode/taste/: taste.md
.github/workflows/: evaldesk.yml
action/: action.yml  index.mjs
drizzle/: 0000_brainy_korath.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
drizzle/pg/: 0000_wealthy_thor_girl.sql  0001_sleepy_ikaris.sql  0002_tiny_blink.sql  0003_sour_dreadnoughts.sql  0004_sturdy_gauntlet.sql  0005_misty_fat_cobra.sql  0006_strange_doctor_faustus.sql  0007_odd_liz_osborn.sql  0008_parallel_zeigeist.sql  0009_great_toro.sql  0010_clean_shiva.sql  0011_medical_joseph.sql
drizzle/sqlite/: 0000_redundant_lady_deathstrike.sql  (+11 more)
marketing/: generate_assets.py
scripts/: check-eval-path.mjs  check-open-core.mjs  db-spec.mjs  e2e-smoke.mjs  gen-schema.mjs  seed-demo.ts  verify-cert.mjs
sdk/python/: pyproject.toml
sdk/python/evaldesk/: __init__.py  client.py  evaluator.py  exceptions.py  models.py  types.py
sdk/python/evaldesk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/python/tests/: conftest.py  test_client.py
src/: middleware.ts  worker-main.ts
(+486 files in other folders)
