[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "evaldesk-sdk"
version = "0.1.0"
description = "Official Python SDK for EvalDesk — AI agent evaluation toolkit"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
include = ["evaldesk*"]
