[project]
name = "evaldesk"
version = "0.1.0"
description = "Python SDK for EvalDesk — AI-native, expert-verified evaluation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["evaldesk*"]
